reworking sections as needed for mobile

--- a/index.html
+++ b/index.html
@@ -1509,31 +1509,22 @@
                     <div class="row-five">
                         <div class="thirds">
                             <img src="assets/store-icon-tile.png" alt="Microsoft Store icon">
-
-                        </div>
-                        <div class="thirds">
-                            <img src="assets/approved-store-tile-gray.png" alt="Microsoft Store gray icon">
-
-                        </div>
-                        <div class="thirds">
-                            <img src="assets/approved-store-tile-dark.png" alt="Microsoft Store dark icon">
-
-                        </div>
-                    </div>
-                    <div class="row-five">
-                        <div class="thirds">
                             <p>Microsoft Store icon is always used in a tile.</p>
                         </div>
                         <div class="thirds">
+                            <img src="assets/approved-store-tile-gray.png" alt="Microsoft Store gray icon">
                             <p>Light Microsoft Store icon in a dark grey tile is the preferred use. It's the default icon.</p>
                         </div>
                         <div class="thirds">
+                            <img src="assets/approved-store-tile-dark.png" alt="Microsoft Store dark icon">
                             <p>Dark Microsoft Store icon could be used in limited circumstances for visual continuity.
-                                <br>
-                                <span class="red"> This use is not preferred.</span>
-                            </p>
+                            <br>
+                            <span class="red"> This use is not preferred.</span>
+                        </p>
                         </div>
                     </div>
+                    
+                            
 
                     <!-- spacing -->
                     <div class="row" role="presentation"></div>
@@ -1545,22 +1536,14 @@
                     <div class="row-five">
                         <div class="thirds">
                             <img src="assets/retired-xbox-store-logo.png" alt="retired Xbox Store logo">
-                        </div>
-                        <div class="thirds">
-                            <img src="assets/retired-office-logo.png" alt="retired Microsoft Windows Store logo ">
-                        </div>
-                        <div class="thirds">
-                            <img src="assets/retired-shopping-bag.png" alt="retired generic shopping bag">
-                        </div>
-                    </div>
-                    <div class="row-five">
-                        <div class="thirds">
                             <p>Xbox Store icon</p>
                         </div>
                         <div class="thirds">
+                            <img src="assets/retired-office-logo.png" alt="retired Microsoft Windows Store logo ">
                             <p>Windows Store icon</p>
                         </div>
                         <div class="thirds">
+                            <img src="assets/retired-shopping-bag.png" alt="retired generic shopping bag">
                             <p>Generic shopping bag</p>
                         </div>
                     </div>
@@ -1596,23 +1579,15 @@
                     </div>
                     <div class="row-five">
                         <div class="thirds">
-                            <img src="assets/ms-store-text.png" alt="Use Microsoft Store in text">
-                        </div>
+                            <img src="assets/ms-store-text.png" alt="Use Microsoft Store in text">                            
+                            <p>Just use “Microsoft store” in text</p>
+                        </div>                            
                         <div class="thirds">
                             <img src="assets/functional-icon.png" alt="use icon in a functional way">
-                        </div>
-                        <div class="thirds">
-                            <img src="assets/graphic-continuity-logo.png" alt="use icon as logo for graphic continuity">
-                        </div>
-                    </div>
-                    <div class="row-five">
-                        <div class="thirds">
-                            <p>Just use “Microsoft store” in text</p>
-                        </div>
-                        <div class="thirds">
                             <p>Icon is used functionally</p>
                         </div>
                         <div class="thirds">
+                            <img src="assets/graphic-continuity-logo.png" alt="use icon as logo for graphic continuity">
                             <p>Icon is used for graphic continuity</p>
                         </div>
                     </div>
@@ -1737,50 +1712,30 @@
                         <h4>Our brand is crafted with care</h4>
                     </div>
                     <div class="row">
-                        <h5 class="heavy">It has the power to move people. It inspires, expresses, and connects. And it reflects our commitment
-                            to empowering people. </h5>
+                        <h5 class="heavy">It has the power to move people. It inspires, expresses, and connects. And it reflects our commitment to empowering people. </h5>
                     </div>
                     <div class="row">
                         <div class="thirds">
                             <p class="title large">Keep it simple</p>
+                            <p>Create clean, open, timeless designs. Infusing simplicity into everything we do improves customer experience. Use space to give your message impact. </p>
                         </div>
                         <div class="thirds">
                             <p class="title large">Make it personal</p>
+                            <p>Tailor experiences to the ways that people really think, live, and act. Use storytelling in your marketing. Keep the narratives simple, human, and on voice. </p>
                         </div>
                         <div class="thirds">
                             <p class="title large">Think universal</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="thirds">
-                            <p>Create clean, open, timeless designs. Infusing simplicity into everything we do improves customer
-                                experience. Use space to give your message impact. </p>
-                        </div>
-                        <div class="thirds">
-                            <p>Tailor experiences to the ways that people really think, live, and act. Use storytelling in your
-                                marketing. Keep the narratives simple, human, and on voice. </p>
-                        </div>
-                        <div class="thirds">
-                            <p>Being inclusive makes it better for all. Make it accessible, inviting, and easy to understand.
-                                Our marketing should represent the diversity of the world that we serve. </p>
+                            <p>Being inclusive makes it better for all. Make it accessible, inviting, and easy to understand. Our marketing should represent the diversity of the world that we serve. </p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="thirds">
                             <p class="title large">Create delight</p>
+                            <p>Evoke wonder and discovery. From social to software and using our products, we create experiences that delight customers across all our brand touch points. </p>
                         </div>
                         <div class="thirds">
                             <p class="title large">Details matter</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="thirds">
-                            <p>Evoke wonder and discovery. From social to software and using our products, we create experiences
-                                that delight customers across all our brand touch points. </p>
-                        </div>
-                        <div class="thirds">
-                            <p>Achieve the highest levels of quality and craft. As with our products, every detail matters.
-                                Each moment is an opportunity to elevate quality.</p>
+                            <p>Achieve the highest levels of quality and craft. As with our products, every detail matters. Each moment is an opportunity to elevate quality.</p>
                         </div>
                     </div>
                 </div>
