additional mobile/tablet styles

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             <a href="#section-5-6" class="green">Image system overview</a>
                         </li>
                         <li role="menuitem" class="sub-nav__item">
-                            <a href="#section-5-7" class="green">Image system: things to avoid</a>
+                            <a href="#section-5-7" class="green">Image system: <br>things to avoid</a>
                         </li>
                         <li role="menuitem" class="sub-nav__item">
                             <a href="#section-5-8" class="green">Lifestyle photography</a>
