--- a/index.html
+++ b/index.html
@@ -340,9 +340,7 @@
                     </div>
                     <div class="row">
 
-                        <h5 class="heavy">In 1975, Bill Gates and Paul Allen had a huge vision&mdash;a computer on every desk and in every
-                            home. At the heart of that vision was our mission of empowerment, the motivation to make technology
-                            accessible to everyone and help people from all walks of life create, prosper, and achieve.</h5>
+                        <h5 class="heavy">In 1975, Bill Gates and Paul Allen had a huge vision&mdash;a computer on every desk and in every home. At the heart of that vision was our mission of empowerment, the motivation to make technology accessible to everyone and help people from all walks of life create, prosper, and achieve.</h5>
                     </div>
 
 
@@ -355,8 +353,7 @@
                         <div class="left">
                             <p>What do you do when you want a job in one of the toughest fields to break into? </p>
                             <p>Step one is to not give up. </p>
-                            <p>Step two is to take countless photographs, spend hours, days, weeks editing video, and promoting
-                                your YouTube and Instagram accounts without a pause. </p>
+                            <p>Step two is to take countless photographs, spend hours, days, weeks editing video, and promoting your YouTube and Instagram accounts without a pause. </p>
                             <p>Saying no to anxiety and the doubts of others, Edsta found his voice and an audience.</p>
                             <p>Surface Pro is helping him break through</p>
                         </div>
@@ -1812,36 +1809,21 @@
                         <h4>We are accessible</h4>
                     </div>
                     <div class="row">
-                        <h5 class="heavy">It's in our mission statement: Empower every person on the planet to achieve more. Designing for
-                            accessibility opens up our experiences and reflects how people adapt to the world around them.
-                            </h5>
+                        <h5 class="heavy">It's in our mission statement: Empower every person on the planet to achieve more. Designing for accessibility opens up our experiences and reflects how people adapt to the world around them.</h5>
                     </div>
                     <div class="row">
                         <div class="thirds">
                             <p class="title large">Recognize exlusion</p>
+                            <p>Exclusion happens when we solve problems using our own biases. As Microsoft designers, we seek out those exclusions, and use them as opportunities to create new ideas and inclusive designs.
+                            </p>
                         </div>
                         <div class="thirds">
                             <p class="title large">Learn from diversity</p>
+                            <p>Human beings are the real experts in adapting to diversity. Inclusive design puts people in the  center from the very start of the process, and those fresh, diverse perspectives are the key to true insight. </p>
                         </div>
                         <div class="thirds">
                             <p class="title large">Solve for one, extend to many</p>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="thirds">
-                            <p>Exclusion happens when we solve problems using our own biases. As Microsoft designers, we seek
-                                out those exclusions, and use them as opportunities to create new ideas and inclusive designs.
-                                </p>
-                        </div>
-                        <div class="thirds">
-                            <p>Human beings are the real experts in adapting to diversity. Inclusive design puts people in the
-                                center from the very start of the process, and those fresh, diverse perspectives are the
-                                key to true insight. </p>
-                        </div>
-                        <div class="thirds">
-                            <p>Everyone has abilities—and limits to those abilities. Designing for people with permanent disabilities
-                                actually results in designs that benefit people universally. Constraints are a beautiful
-                                thing. </p>
+                            <p>Everyone has abilities—and limits to those abilities. Designing for people with permanent disabilities actually results in designs that benefit people universally. Constraints are a beautiful thing. </p>
                         </div>
                     </div>
 
@@ -1851,29 +1833,18 @@
                     <div class="row">
                         <div class="thirds">
                             <p class="title large">Ensure all site content is accessibile </p>
+                            <p>Evoke wonder and discovery. From social to software and using our products, we create experiences that delight customers across all our brand touch points.</p>
                         </div>
                         <div class="thirds">
                             <p class="title large">POUR on the content </p>
+                            <p>Achieve the highest levels of quality and craft. As with our products, every detail matters. Each moment is an opportunity to elevate quality.</p>
                         </div>
                         <div class="thirds">
                             <p class="title large">Text on images </p>
+                            <p>Do not use raster images of text (for example, in .gif or .jpg files) to convey information except when the information that is being conveyed is constrained by or dependent upon the presentation format (such as logos, logotypes, or font samples). </p>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="thirds">
-                            <p>Evoke wonder and discovery. From social to software and using our products, we create experiences
-                                that delight customers across all our brand touch points.</p>
-                        </div>
-                        <div class="thirds">
-                            <p>Achieve the highest levels of quality and craft. As with our products, every detail matters.
-                                Each moment is an opportunity to elevate quality.</p>
-                        </div>
-                        <div class="thirds">
-                            <p>Do not use raster images of text (for example, in .gif or .jpg files) to convey information except
-                                when the information that is being conveyed is constrained by or dependent upon the presentation
-                                format (such as logos, logotypes, or font samples). </p>
-                        </div>
-                    </div>
+
                     <div class="row">
                         <a href="https://microsoft.sharepoint.com/:w:/r/teams/msenable/_layouts/15/Doc.aspx?sourcedoc=%7B596F8B46-8D84-4605-A396-62106243C661%7D&file=MAS%20Pre-filtered%20for%20Web.docx&action=edit&mobileredirect=true"
                             class="full" target="_blank">MAS pre-filtered web accessibility guidelines </a>
@@ -2554,7 +2525,7 @@
                         </div>
                         <div class="fat-thirds">
                             <div class="single">
-                                <p class="title">Create versatile compositions</p>
+                                <p class="title extra">Create versatile compositions</p>
                                 <img src="assets/lightbox.png" alt="highlight on a photo with a woman">
                                 <p>Photos should have an abundance of background surrounding the focal point—so they can be used in multiple placements. </p>
                             </div>
