final tablet styles

--- a/index.html
+++ b/index.html
@@ -1828,7 +1828,7 @@
                     </div>
 
                     <!-- spacing -->
-                    <div class="row" role="presentation"></div>
+                    <div class="row hidden-xs" role="presentation"></div>
 
                     <div class="row">
                         <div class="thirds">
@@ -2282,25 +2282,18 @@
                     <div class="row v-center">
                         <div class="thirds">
                             <img src="assets/wizard_week.png" alt="don't boldface parts of the text">
-                        </div>
-                        <div class="thirds">
-                            <img src="assets/merperson.png" alt="don't create type and image lockups">
-                        </div>
-                        <div class="thirds">
-                            <img src="assets/quarks.png" alt="don't combine types">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="thirds">
                             <p>Don't boldface parts of the text</p>
                         </div>
                         <div class="thirds">
+                            <img src="assets/merperson.png" alt="don't create type and image lockups">
                             <p>Don't create type and image lock-ups </p>
                         </div>
                         <div class="thirds">
+                            <img src="assets/quarks.png" alt="don't combine types">
                             <p>Don't create type lock-ups, don't use any other type, don't combine types </p>
                         </div>
                     </div>
+
 
                     <!-- spacing -->
                     <div class="row" role="presentation"></div>
