--- a/index.html
+++ b/index.html
@@ -1054,7 +1054,7 @@
                     <div class="row">
                         <h5 class="heavy">Microsoft Store is the channel through which our customers experience, interact, and build relations with Microsoft. It's where we empower every person and organization on the planet to achieve more. </h5>
                     </div>
-                    <div class="row">
+                    <div class="row master-brand">
                         <p class="title">Master Brand</p>
                     </div>
                     <div class="row">
@@ -1123,7 +1123,7 @@
 
                     <hr class="pb">
                     <div class="row">
-                        <h5 class="heavy">This is our name</h5>
+                        <h5 class="heavy this-is-our-name">This is our name</h5>
                     </div>
                     <div class="row">
                         <h2 class="super tall">Microsoft Store</h2>
@@ -1341,12 +1341,10 @@
                             <br> Don't create logo lock-ups.
                             <br> Don't use the symbol on its own. </h5>
                     </div>
-                    <div class="row-fluid">
-                        <div class="middle">
-                            <img src="assets/ms-example-1.png" alt="Microsoft official logo">
-                        </div>
+                    <div class="row-fluid primary-logo">
+                        <img src="assets/microsoft-logo.png" alt="Microsoft official logo">
                     </div>
-                    <div class="row">
+                    <div class="row padding">
                         <div class="half">
                             <p>Minimum clear space</p>
                             <img src="assets/min-space.png" alt="minimum space around Microsoft logo">
@@ -1366,7 +1364,7 @@
                             <img src="assets/margin-2x.png" alt="margin is height of 2 symbols for Microsoft logo">
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row first">
                         <hr>
                     </div>
                     <div class="row">
@@ -1375,7 +1373,7 @@
                             <img src="assets/ms-min-size.png" alt="minimum size for the logo on-screen 15.5px print 0.22 (5.5mm)">
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row second">
                         <hr>
                     </div>
                     <div class="row">
