--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
                             <p>Always be thoughtful, relevant, and transparent in any experience you put in front of a customer. Curate, be open and engaging about your selection criteria and tastes. </p>
                         </div>
                         <div class="donts">
-                            <p>Developing all design in-house, sharing only your own opinion, and h v osting only our own content in social media.</p>
+                            <p>Developing all design in-house, sharing only your own opinion, and hosting only our own content in social media.</p>
                         </div>
                     </div>
                     <div class="row-lined hidden-xs">
@@ -1070,7 +1070,7 @@
                                 </div>
                                 <div class="donts">
                                     <p class="title large">Don't do this</p>
-                                    <p>Developing all design in-house, sharing only your own opinion, and h v osting only our own content in social media.</p>
+                                    <p>Developing all design in-house, sharing only your own opinion, and hosting only our own content in social media.</p>
                                 </div>
                             </div>
                             <div class="row-lined">
