--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
                             <a href="#section-4-7" class="orange">Microsoft Store icon use</a>
                         </li>
                         <li role="menuitem" class="sub-nav__item">
-                            <a href="#section-4-8" class="orange">Microsoft Store icon:
-                                <br>things to avoid</a>
+                            <a href="#section-4-8" class="orange">Microsoft Store icon: things to avoid</a>
                         </li>
                         <li role="menuitem" class="sub-nav__item">
                             <a href="#section-4-9" class="orange">Microsoft Store badge</a>
@@ -153,14 +152,13 @@
                             <a href="#section-5-6" class="green">Image system overview</a>
                         </li>
                         <li role="menuitem" class="sub-nav__item">
-                            <a href="#section-5-7" class="green">Image system: <br>things to avoid</a>
+                            <a href="#section-5-7" class="green">Image system: things to avoid</a>
                         </li>
                         <li role="menuitem" class="sub-nav__item">
                             <a href="#section-5-8" class="green">Lifestyle photography</a>
                         </li>
                         <li role="menuitem" class="sub-nav__item">
-                            <a href="#section-5-9" class="green">Lifestyle photography:
-                                <br> things to avoid</a>
+                            <a href="#section-5-9" class="green">Lifestyle photography: things to avoid</a>
                         </li>
                         <li role="menuitem" class="sub-nav__item">
                             <a href="#section-5-10" class="green">Product photography</a>
