--- a/index.html
+++ b/index.html
@@ -2169,7 +2169,7 @@
                     <div class="row" role="presentation"></div>
 
 
-                    <div class="row">
+                    <div class="row type-chart">
                         <div class="single">
                             <h4>Segoe</h4>
                         </div>
@@ -2204,8 +2204,8 @@
                         <div class="first">Recommended individual font weights</div>
                         <div class="second">
                             <p class="f-big">Regular</p>
-                            <p class="big semibold">Semibold</p>
-                            <p class="big bold">Bold</p>
+                            <p class="f-big semibold">Semibold</p>
+                            <p class="f-big bold">Bold</p>
                         </div>
                         <div class="third">
                             <p class="f-biggerer semilight">
