--- a/index.html
+++ b/index.html
@@ -1982,9 +1982,10 @@
                                     R0 G0 B0
                                     <br> Hex #000000
                                     <br> C33 M33 Y33 K100
-                                    <br>
                                 </p>
+                                <br>
                             </div>
+                            <div class="double hidden-xs"></div>
                             <div class="single">
                                 <span class="swatch" style="background: #e6e6e6;">Aa</span>
                                 <p>Light Gray</p>
@@ -2004,7 +2005,8 @@
                                     <br> C0 M0 Y0 K20
                                     <br> PMS Cool Gray 3
                                 </p>
-                            </div>                            
+                            </div>       
+                            <div class="double hidden-xs"></div>                     
                             <div class="single">
                                 <span class="swatch white" style="background: #737373;">Aa</span>
                                 <p>Mid Gray</p>
