--- a/index.html
+++ b/index.html
@@ -2279,15 +2279,15 @@
 
                     <div class="row v-center">
                         <div class="thirds">
-                            <img src="assets/wizard_week.png" alt="don't boldface parts of the text">
+                            <img src="assets/wizarding-weekend.gif" alt="don't boldface parts of the text">
                             <p>Don't boldface parts of the text</p>
                         </div>
                         <div class="thirds">
-                            <img src="assets/merperson.png" alt="don't create type and image lockups">
+                            <img src="assets/merperson.gif" alt="don't create type and image lockups">
                             <p>Don't create type and image lock-ups </p>
                         </div>
                         <div class="thirds">
-                            <img src="assets/quarks.png" alt="don't combine types">
+                            <img src="assets/discover-quarks.gif" alt="don't combine types">
                             <p>Don't create type lock-ups, don't use any other type, don't combine types </p>
                         </div>
                     </div>
