long-bow to match table width

--- a/index.html
+++ b/index.html
@@ -531,8 +531,15 @@
                             <br> Here are a copule of examples of what achievement means for our customers.</h5>
                     </div>
                     <div class="row">
-                        <h5>From
-                            <span class="long-bow"></span>To</h5>
+                        <div class="bow-wrap">
+                            <h5>From
+                                <span class="long-bow"></span>
+                            </h5>
+                        </div>
+                        <div class="wrap2">
+                            <h5>To</h5>
+                        </div>
+                        
                     </div>
                     <div class="row">
                         <hr>
