adding section 7 for au revoir

--- a/index.html
+++ b/index.html
@@ -3063,6 +3063,20 @@
                     </div>
                 </div>
             </section>
+            <section id="7-1">
+                <div class="wrapper">
+                    <span class="badge green"></span>
+                    <div class="row">
+                        <h4></h4>
+                    </div>
+                    <div class="row">
+                        <h5></h5>
+                    </div>
+                    <div class="row">
+                        <p></p>
+                    </div>
+                </div>
+            </section>
         </main>
 
 
