--- a/index.html
+++ b/index.html
@@ -191,6 +191,9 @@
 
                     </ul>
                 </li>
+                <li role="menuitem">
+                    <a href="#section-7" class="green_green">Au Revoir</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -3063,7 +3066,7 @@
                     </div>
                 </div>
             </section>
-            <section id="7-1">
+            <section id="section-7">
                 <div class="wrapper">
                     <span class="badge green"></span>
                     <div class="row">
