--- a/index.html
+++ b/index.html
@@ -1485,7 +1485,7 @@
                         <h4>That's how we use the logo</h4>
                     </div>
                     <div class="row">
-                        <h5 class="heavy">Use the full colo Microsoft logo on every communication, except for social.</h5>
+                        <h5 class="heavy">Use the full color Microsoft logo on every communication, except for social.</h5>
                     </div>
                     <div class="row">
                         <p class="title">Banners</p>
