section 5-9 paragraph spacing

--- a/index.html
+++ b/index.html
@@ -2549,11 +2549,7 @@
                     <div class="row-twelve">
                         <div class="half">
                             <div class="title dos">Do this</div>
-                            <p>Use real people</p>
-                            <p>Reveal authentic moments </p>
-                            <p>Show how people are empowered</p>
-                            <p>See whether we empower those behind the scenes</p>
-                            <p>Create stories about the shoots themselves, helping people learn new things and how they can do it, too</p>
+                            <p>Use real people<br>Reveal authentic moments <br>Show how people are empowered<br>See whether we empower those behind the scenes<br>Create stories about the shoots themselves, helping people learn new things and how they can do it, too</p>
                         </div>
                         <div class="half donts">
                             <div class="title donts">Avoid</div>
