fixing spacing for logo section

--- a/index.html
+++ b/index.html
@@ -1435,7 +1435,7 @@
                             <img src="assets/margin-2x.png" alt="margin is height of 2 symbols for Microsoft logo">
                         </div>
                     </div>
-                    <div class="row first">
+                    <div class="row">
                         <hr>
                     </div>
                     <div class="row">
